extensions/odoo_theme/static/style.scss
/* ... */
body {
    a:not(:hover), a.o_logo {
        text-decoration: none !important;
    }

    dd {
        margin-left: 1rem;
    }

    // This fixes the scroll position on all elements, including refs
    :target {
        &:before {
            @include o-scroll-padding()
        }
    }

    abbr[title="Pull Request"] {
        @include o-easter-egg();
    }
}

.hidden {
    visibility: hidden !important;
    display: none !important;
    opacity: 0 !important;
}
//------------------------------------------------------------------------------
// Header with logo, searchbar and switchers
//------------------------------------------------------------------------------

header.o_main_header {
    width: 100%;
    height: $o-header-mobile-height;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    background-color: $o-header-white;
    z-index: 10;
    @include media-breakpoint-up(lg) {
        height: $o-header-height;
        padding-right: 3rem;
    }

    .o_logo_wrapper {
        padding: 0 1rem;

        > .o_logo {
            img {
                margin-bottom: -2px;
                vertical-align: baseline;
            }

            span {
                @include font-size($font-size-base);
                color: $o-violet;
                @include o-easter-egg($img:'img/ducky.svg');
            }
        }
        @include media-breakpoint-up(xl) {
            width: $o-side-nav-width;
        }
        @include media-breakpoint-up(lg) {
            padding-left: 3rem;
            margin-right: 3rem;
        }
    }
    .o_search_wrapper {
        display: flex;
        opacity: 1;
        @include transition(opacity .3s);

        @include media-breakpoint-down(lg) {
            display: block;
            position: absolute;
            width: 100%;
            padding: 0 10px;
            top: calc(100% + 15px);
       }
    }

    &.o_header_scrolled {
        .o_search_wrapper {
            @include media-breakpoint-down(lg) {
                opacity: 0;
            }
        }
    }


    .highlight-link {
        margin-bottom: 0;
        padding: 0 1rem;
        text-align: center;
        align-self: center;

        a {
            @include font-size($font-size-secondary);
        }
    }
    .navbar-toggler {
        border: none;

        &[aria-expanded="true"] {
            .icon-bar {
                &:nth-of-type(1) {
                    @include o-transform(rotate(45deg));;
                    @include o-transform-origin(10%, 10%)
                }

                &:nth-of-type(2) {
                    opacity: 0;
                    filter: alpha(opacity=0);
                }

                &:nth-of-type(3) {
                    @include o-transform(rotate(-45deg));
                    @include o-transform-origin(10%, 90%)
                }
            }
        }
        .icon-bar {
            display: block;
            width: 22px;
            height: 2px;
            background-color: $gray-dark;
            @include o-transition(all, .2s);

            &+ .icon-bar {
                margin-top: 4px;
            }

            &:nth-of-type(1) {
                @include o-transform(rotate(0));
            }

            &:nth-of-type(2) {
                opacity: 1;
                filter: alpha(opacity=100);
            }

            &:nth-of-type(3) {
                @include o-transform(rotate(0));
            }
        }

        &:focus {
            box-shadow: none;
            outline:none;
        }
    }
}

.o_logo img {
    @include media-breakpoint-up(lg) {
        height: 30px
    }
}

.o_search_wrapper {
    .o_search {
        position: relative;
        width: 100%;
        @include media-breakpoint-up(lg) {
            max-width: 500px;
        }

        .btn {
            @include o-position-absolute($top: 50%, $right: 1rem);
            @include o-transform (translateY(-50%)) ;
            padding: 0;
            font-size: 1.2rem;
            color: $gray;
        }
    }
}
/* ... */

